fix alignment

--- a/src/styles/ActivityCard.css
+++ b/src/styles/ActivityCard.css
@@ -1,7 +1,7 @@
 .cardContainer {
   background-color: #647afc !important;
-  height: 47vh !important;
-  width: 16vw !important;
+  height: 50vh !important;
+  width: 18vw !important;
   border-radius: 10px !important;
   color: var(--tezos-white);
   padding: 10px !important;
