--- a/src/styles/FAQ.css
+++ b/src/styles/FAQ.css
@@ -22,11 +22,11 @@
   gap: 20px 0;
 }
 .faq-margin-cards p {
-  margin-top: -4px;
+  margin-top: -5px;
   font-size: 14px;
 }
 .faq-margin-cards-two p {
-  margin-top: -4px;
+  margin-top: -5px;
   font-size: 14px;
 }
 .faqStyles-btn {
