--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   background: #2b48be !important;
-  height: 44vh;
+  height: 46vh;
   width: 100%;
   font-family: "Inter", sans-serif;
 }
